# fastahack

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  Fasta.cpp  Fasta.h  FastaHack.cpp  FastaHackAPI.cpp  FastaHackAPI.hpp  split.cpp
tests/: CMakeLists.txt  api_tests.cpp  correct_with_N.fasta  correct_with_N.fasta.fai
